[tool.poetry]
name = "mlfinlab"
version = "0.1.0"
description = "Replication of Lopez de Prado book using Python"
authors = ["Belg PC <tomsomoza911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.10.0"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
